Fix form element alignment.

--- a/src/style/form.css
+++ b/src/style/form.css
@@ -9,6 +9,7 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/.
 }
 .form-element {
 	display: flex;
+  align-items: center;
 }
 .form-element.right {
 	justify-content: flex-end;
